todo_app/overlays/staging/manifests/route_backend_staging.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: project-staging
  name: todo-backend-route
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todoapp-staging/api
